# OpenHarness

./: .gitignore  .pre-commit-config.yaml  AGENT_HANDOFF.md  CHANGELOG.md  CONTRIBUTING.md  README.md  README.zh-CN.md  pyproject.toml  test_langfuse.py  test_message.py
.agents/skills/: .gitignore
.cursor/plans/: lab_web_redesign_9491e6fc.plan.md  simplify-lab-pipeline_e194d047.plan.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  gemini-autofix.yml
components/: README.md  loop-guard.yaml
docs/: README.md  SHOWCASE.md  agent-system.md  architecture-diagram.html  architecture.md  examples.md  features.md  fork-integration.md  runs.md  template-variables.md  workflow-system.md
examples/: README.md
examples/_shared/: __init__.py  bugfix_task.py  helpers.py
examples/harbor_dataset/: run.py
examples/harbor_fix_bug/: run.py
examples/harbor_registry_task/: run.py
examples/local_coordinator_swarm_fix_bug/: run.py
examples/local_docker_sandbox_fix_bug/: run.py
examples/local_fix_bug/: run.py
examples/local_langfuse_live_single_agent/: run.py
examples/local_workflow_coordinator_worker_fix_bug/: demo_support.py  run.py  run_compare.py  run_programmatic.py  run_python.py  run_workflows.py
experiments/: model-escalation-router-hard-clusters.yaml  tb2-baseline.yaml  tb2-gemini3-model-baseline.yaml
lab/: AUTONOMOUS.md  METHODOLOGY.md  OPERATIONS.md  README.md  components.md  configs.md  experiments.md  ideas.md  roadmap.md
lab/dashboard/: app.py
langfuse-selfhost/: docker-compose.yml
ohmo/: __main__.py  cli.py  memory.py  runtime.py  session_storage.py
ohmo/gateway/: __init__.py  bridge.py  models.py  router.py  runtime.py  service.py
schemas/: component_contract.json
schemas/skills/: experiment-critic.json
scripts/: collect_experiment_results.py  e2e_smoke.py  install.ps1  isolated_agent_test.py  lab-svc.sh  lab-webui.sh  local_system_scenarios.py  react_tui_e2e.py  run_experiments.py  test_cli_flags.py  test_docker_sandbox_e2e.py  test_harness_features.py  test_headless_rendering.py  test_react_tui_redesign.py  test_real_skills_plugins.py  test_tui_interactions.py  validate_contracts.py
scripts/exp/: README.md  _lib.sh  attach.sh  cleanup_docker.sh  list.sh  start.sh  status.sh  stop.sh
scripts/systemd/: install.sh  openharness-daemon.service  openharness-lab.service
src/openharness/: cli.py  platforms.py
tests/: conftest.py  test_hooks_skills_plugins_real.py  test_merged_prs_on_autoagent.py  test_real_large_tasks.py  test_untested_features.py
tests/test_agents/: test_agents.py  test_react_architecture.py  test_tb2_configs.py
tests/test_api/: test_client.py  test_codex_client.py  test_factory.py  test_gemini_client.py  test_openai_client.py
tests/test_auth/: test_external.py
tests/test_autopilot/: test_verification.py
tests/test_bridge/: test_core.py  test_session_flow.py
tests/test_commands/: test_cli.py  test_registry.py
tests/test_config/: test_paths.py  test_settings.py
tests/test_engine/: test_loop_guard.py  (+3 more)
(+792 files in other folders)
